After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 731802 - gnome-keyring-3.12.2 fails test-import
gnome-keyring-3.12.2 fails test-import
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: general
3.12.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-06-17 21:54 UTC by Émeric MASCHINO
Modified: 2015-09-28 13:47 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
test-suite.log (92.41 KB, text/x-log)
2014-06-17 21:54 UTC, Émeric MASCHINO
  Details
test-import.log (306 bytes, text/plain)
2014-06-18 20:32 UTC, Émeric MASCHINO
  Details
test-import backtrace (2.46 KB, text/plain)
2014-06-22 15:36 UTC, Émeric MASCHINO
  Details
test-import: Initialize error with NULL to fix segfault (791 bytes, patch)
2015-09-06 09:18 UTC, Dmitry Shachnev
none Details | Review

Description Émeric MASCHINO 2014-06-17 21:54:46 UTC
Created attachment 278630 [details]
test-suite.log

Building gnome-keyring-3.12.2 with tests enabled on Gentoo/ia64 fails in test-import:

ERROR: test-import
==================

# ./build/tap-driver --test-name test-import --log-file test-import.log --trs-fi
le test-import.trs --color-tests yes --enable-hard-errors yes --expect-failure n
o --format=tap -- ./build/tap-gtester ./test-import
1..1
# random seed: R02S98a629ed1f93501a47b468fbeba7c976
not ok 1 /gnome2-store/import/pkcs12

All other tests pass fine or are skipped (test-data-asn1 and test-pam).
Comment 1 Stef Walter 2014-06-18 10:19:32 UTC
Could you attach test-import.log?
Comment 2 Émeric MASCHINO 2014-06-18 20:32:12 UTC
Created attachment 278715 [details]
test-import.log
Comment 3 Émeric MASCHINO 2014-06-18 20:34:21 UTC
(In reply to comment #1)
> Could you attach test-import.log?

Please have a look at attachment 278715 [details].

But it seems to me that its content matches test-suite.log one.
Comment 4 Stef Walter 2014-06-20 10:39:25 UTC
Is there any output when you run ./test-import manually? Unfortunately there's nothing descriptive in the test-import.log attachment.
Comment 5 Émeric MASCHINO 2014-06-22 15:36:04 UTC
Created attachment 278928 [details]
test-import backtrace
Comment 6 Émeric MASCHINO 2014-06-22 15:36:47 UTC
(In reply to comment #4)
> Is there any output when you run ./test-import manually? Unfortunately there's
> nothing descriptive in the test-import.log attachment.

Good catch, test-import is simply segfaulting!

Does the attached backtrace (attachment #278928 [details]) provide enough information?
Comment 7 Dmitry Shachnev 2015-09-06 09:18:51 UTC
Created attachment 310741 [details] [review]
test-import: Initialize error with NULL to fix segfault

I can reliably reproduce this segfault on Debian GNU/Linux unstable amd64.

It segfaults in g_assert_no_error (test-import.c:136), because error is 0x02.

The attached patch fixes it by initializing error with NULL.
Comment 8 Dmitry Shachnev 2015-09-23 13:25:29 UTC
Stef, can you please include my patch above in 3.18.0 release?
Comment 9 Stef Walter 2015-09-28 13:47:47 UTC
Attachment 310741 [details] pushed as c4957eb - test-import: Initialize error with NULL to fix segfault