test-import: Initialize error with NULL to fix segfault

https://bugzilla.gnome.org/show_bug.cgi?id=731802